try to fix some layout issues on mobile devices; track the button click events

--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,7 @@ div.english-form-padding {
 .social-network {
     padding-left: 2em;
     padding-right: 2em;
+    overflow: hidden;
 }
 
 #weibo-div {
